--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,29 @@
     <title>Homework2</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
-                                <!-- header -->
+        <!-- header -->
         <header class="header">
+            <div class="RBK">
             <div class="logo">
                 <h1>URLAUBSGLÜCK</h1>
             </div>
-        <div class="menu">
-            <input a class="special" type="button" value="Log in" >
-            <input class="special1" type="button" value="Sign up">
+            <div class="menu">
+                <input class="special" type="button" value="Log in">
+                <input class="special1" type="button" value="Sign up">
+            </div>
         </div>
         </header>
-                                <!-- main -->
+        <!-- main -->
         <main class="main">
             <section class="view">
                 <h2>Share your <br>
                 holiday dreams</h2>
                 <p>And find the perfect partner to fullfill it</p>
                 <input type="button" value="Find your holiday partner">
-             </section>
+            </section>
             <section class="teem">
                 <h2>Meet a partner for your best holiday</h2>
                 <ul>
@@ -35,37 +39,44 @@
                             <img src="/img/012345.jpg" alt="#">
                         </div>
                         <h3>Bradley Hunter</h3>
-                        <p>Based in Chicago. I love playing<br> tennis and loud music.</p>
+                        <p>Based in Chicago. I love playing
+                            <br> tennis and loud music.</p>
                     </li>
                     <li>
                         <div class="team-imge">
                             <img src="/img/012345.jpg" alt="#">
                         </div>
                         <h3>Heather Walker</h3>
-                        <p>I'm a happy person that loves cats<br> and climbing on mountains.</p>
+                        <p>I'm a happy person that loves cats
+                            <br> and climbing on mountains.</p>
                     </li>
                     <li>
                         <div class="team-imge">
                             <img src="/img/012345.jpg" alt="#">
                         </div>
                         <h3>Lucas Marsha</h3>
-                            <p>I get my inspiration from nature <br>and objects around me. I have a <br>passion to colours, typography and<br> skateboards.
+                        <p>I get my inspiration from nature
+                            <br>and objects around me. I have a
+                            <br>passion to colours, typography and
+                            <br> skateboards.
                         </p>
                     </li>
                     <li>
                         <div class="team-imge">
                             <img src="/img/012345.jpg" alt="#">
-                            </div>
-                            <h3>Bradley Hunter</h3>
-                        <p>Based in Chicago. I love playing <br> tennis and loud music.</p>
+                        </div>
+                        <h3>Bradley Hunter</h3>
+                        <p>Based in Chicago. I love playing
+                            <br> tennis and loud music.</p>
                     </li>
                 </ul>
             </section>
         </main>
-                                <!-- footer -->
+        <!-- footer -->
         <footer class="footer">
             <input type="button" name="See other partners" value="See other partners">
         </footer>
     </div>
 </body>
+
 </html>
