--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li>
                         <div class="team-imge">
-                            <img src="/img/012345.jpg" alt="#">
+                            <img src="img/012345.jpg" alt="#">
                         </div>
                         <h3>Bradley Hunter</h3>
                         <p>Based in Chicago. I love playing
@@ -44,7 +44,7 @@
                     </li>
                     <li>
                         <div class="team-imge">
-                            <img src="/img/012345.jpg" alt="#">
+                            <img src="img/012345.jpg" alt="#">
                         </div>
                         <h3>Heather Walker</h3>
                         <p>I'm a happy person that loves cats
@@ -52,7 +52,7 @@
                     </li>
                     <li>
                         <div class="team-imge">
-                            <img src="/img/012345.jpg" alt="#">
+                            <img src="img/012345.jpg" alt="#">
                         </div>
                         <h3>Lucas Marsha</h3>
                         <p>I get my inspiration from nature
@@ -63,7 +63,7 @@
                     </li>
                     <li>
                         <div class="team-imge">
-                            <img src="/img/012345.jpg" alt="#">
+                            <img src="img/012345.jpg" alt="#">
                         </div>
                         <h3>Bradley Hunter</h3>
                         <p>Based in Chicago. I love playing
