--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="wrapper">
         <!-- header -->
         <header class="header">
-            <div class="RBK">
-            <div class="logo">
-                <h1>URLAUBSGLÜCK</h1>
+            <div class="rbk">
+                <div class="logo">
+                    <h1>URLAUBSGLÜCK</h1>
+                </div>
+                <div class="menu">
+                    <input class="special" type="button" value="Log in">
+                    <input class="special1" type="button" value="Sign up">
+                </div>
             </div>
-            <div class="menu">
-                <input class="special" type="button" value="Log in">
-                <input class="special1" type="button" value="Sign up">
-            </div>
-        </div>
         </header>
         <!-- main -->
         <main class="main">
